# Paul

./: .env.example  .gitignore  .pre-commit-config.yaml  CheckAwards_rewritten  Commands  Commands 2.0 + DB  Commands 2.0 + DB.py  DatabaseManager.py  Forceadd_rewritten  README.md  ReferenceBotCode  Search GT.py  addnote.py  alembic.ini  cog_template.py  commands_2.py  database_manager.py  database_manager_mysql.py  docker-compose.yml  paul.py  pyproject.toml  remove_coin.py  remove_note.py  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yaml
Commands _2_Cogs/: Addinfo_rewritten  CheckSquads_rewritten  Forceadd_rewritten  addcoin_rewritten.py  addinfo.py  addsubclass.py  botstatus.py  commands_2.py  member.py  on_delete_voyage.py  on_edit_voyage.py  updatemembers  updatevoyagedb.py
Revision_0_1/: Commands.py  paul.py
Revision_0_1/Reference Code/: ReferenceBotCode.py
core/: bot.py
docs/: architecture.md  getting_started.md  naming_conventions.md  representation-system.md  training.md
src/: api.py  config.py  main.py  old_config.py
src/Archived_Commands/: setinfo.py
src/analytics/: __init__.py  ping_analytics.py  ranges.py  role_size_analytics.py  ship_analytics.py  voyage_analytics.py
src/api/: cache.py  main.py  schemas.py
src/cogs/: __init__.py  abbreviations.py  add_info.py  addanycoin.py  addcoin.py  addinfo.py  addnote.py  addsubclass.py  auto_check_awards.py  botdown.py  botstatus.py  botup.py  check_awards.py  checkpromotion.py  checksquad.py  commandsync.py  crewreport.py  forceadd.py  gamertags.py  grabtop.py  growthreport.py  hidenote.py  logs.py  marineprogress.py  member.py  on_audit_log_entry_create.py  on_delete_training.py  on_delete_voyage.py  on_edit_voyage.py  on_load_voyage.py  on_member_remove.py  on_member_update_nickname_sync.py  on_member_update_training.py  on_message_training.py  on_message_voyage.py  ping.py  populate_training_records.py  populatevoyages.py  progress.py  removecoin.py  (+10 more)
src/config/: __init__.py  abbreviations.py  awards.py  cache.py  cooldowns.py  discord.py  emojis.py  main_server.py  netc_server.py  notifications.py  ping_tracking.py  pocket_watch.py  ranks.py  ranks_roles.py  representation.py  requirements.py  ship_roles.py  ships.py  spd_servers.py  subclasses.py  synonyms.py  task_timing.py  training.py
src/core/: bot.py  command_cooldowns.py  discord_compat.py
src/data/: __init__.py  coin_repository.py  engine.py  hosted_repository.py  models.py  queries.py  report.py  sailor_repository.py  structs.py  voyage_repository.py
src/database/: engine.py  models.py  queries.py
src/notifications/: __init__.py  context.py  contracts.py  date_utils.py  definitions.py  delivery.py  evaluator.py  payloads.py  renderer.py  rollout.py  routing.py  scheduler.py  service_factory.py  ship_health_summary.py  types.py  worker.py
src/scheduler/: scheduler.py
src/security/: __init__.py  (+6 more)
tests/: conftest.py
utility functions to recode/: calculate_utc_offset.py  is_allowed_user.py
utils/: database_manager.py
(+213 files in other folders)
