[project]
name = "paul"
version = "0.1.0"
description = "A Discord bot for the The United States Navy SoT"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "alembic==1.18.4",
    "discord-py==2.7.1",
    "fastapi>=0.115",
    "matplotlib==3.10.8",
    "mysql-connector-python==9.6.0",
    "pre-commit==4.5.1",
    "psutil>=6.0",
    "pymysql==1.1.2",
    "python-dotenv==1.2.2",
    "requests==2.33.1",
    "slowapi>=0.1.9",
    "sqlalchemy==2.0.49",
    "uvicorn>=0.32",
]
[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-mock==3.15.1",
    "parameterized==0.9.0",
]
lint = [
    "ruff==0.15.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
